# kstars_extensions

./: .gitmodules  README.md  siril_1.3.3.deb
firecapture_launcher/: CMakeLists.txt  FC_launcher.conf  FC_launcher_de.ts  FC_launcher_fr.ts  README.md  bombout.h  ekosStatus.h  firecapture_launcher.qrc  kstarsDBusConf.h  kstarsinterface.cpp  kstarsinterface.h  log.h  main.cpp  process.cpp  process.h
kstars_backup/: Backup.conf  CMakeLists.txt  KS_backup.conf  KS_backup.qrc  KS_backup_de.ts  KS_backup_es.ts  KS_backup_fr.ts  README.md  archiver.cpp  archiver.h  confchecker.cpp  confchecker.h  kstarsDBusConf.h  kstarsVersion.h  kstars_backup.qrc  kstars_backup_de.ts  kstars_backup_es.ts  kstars_backup_fr.ts  kstarsinterface.cpp  kstarsinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
launcher/: CMakeLists.txt  Launcher.conf  README.md  bombout.h  ekosStatus.h  kstarsinterface.cpp  launcher.qrc  launcher_de.ts  launcher_es.ts  launcher_fr.ts  log.cpp  log.h  main.cpp  process.cpp  process.h
siril_eaa/: CMakeLists.txt  README.md  Siril_EAA.conf  Siril_EAA.qrc  Siril_EAA_de.ts  Siril_EAA_es.ts  Siril_EAA_fr.ts  bombout.h  confchecker.cpp  confchecker.h  ekosStatus.h  gpt  kstarsDBusConf.h  kstarsVersion.h  kstarsinterface.cpp  kstarsinterface.h  main.cpp  process.cpp  process.h  sirilinterface.cpp  sirilinterface.h  statemachine.cpp  statemachine.h
skeleton_example/: CMakeLists.txt  README.md  bombout.h  confchecker.cpp  confchecker.h  example.conf  kstarsinterface.cpp  kstarsinterface.h  log.cpp  log.h  main.cpp  process.cpp  process.h
